--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+dj-static==0.0.6
 Django==1.8.3
 django-cors-headers==1.1.0
 djangorestframework==3.1.3
+gunicorn==19.3.0
+static3==0.6.1
 suds==0.4
 wheel==0.24.0
